[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/voltar solto.png" type="Texture" id=2]
[ext_resource path="res://Pontuacao.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Sniglet-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 5
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 38
outline_size = 5
font_data = SubResource( 1 )

[node name="TextureButton" type="TextureButton"]
margin_left = 8.7622
margin_top = 166.453
margin_right = 123.762
margin_bottom = 283.453
texture_normal = ExtResource( 2 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Pontos_atual" type="Label" parent="."]
margin_left = 13.0
margin_top = 23.0
margin_right = 49.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.780392, 0.52549, 1 )
custom_colors/font_outline_modulate = Color( 0.576471, 0.298039, 0.0666667, 1 )
text = "#"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos_atual2" type="Label" parent="."]
margin_left = 13.0
margin_top = 23.0
margin_right = 100.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.976471, 0.780392, 0.52549, 1 )
custom_colors/font_outline_modulate = Color( 0.576471, 0.298039, 0.0666667, 1 )
text = "/"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos_total" type="Label" parent="."]
margin_left = 65.0
margin_top = 23.0
margin_right = 103.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.976471, 0.780392, 0.52549, 1 )
custom_colors/font_outline_modulate = Color( 0.576471, 0.298039, 0.0666667, 1 )
text = "#"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerPontuacao" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="TimerPontuacao" to="." method="_on_Timer_timeout"]
